--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
 
 script:
   - docker build -t python-nodejs .
-  - docker run python-nodejs /bin/sh -c "python -V && pip --version && node -v && npm -v && yarn --version"
+  - docker run python-nodejs /bin/sh -c "python -V && pip --version && pipenv --version && node -v && npm -v && yarn --version"
