Generate dockerfiles for all combos

--- a/Dockerfile-template
+++ b/Dockerfile-template
@@ -1,5 +1,7 @@
-# python: %%PYTHON_IMAGE_CANONICAL%% nodejs: %%NODEJS_IMAGE_CANONICAL%%
-FROM python:%%PYTHON_IMAGE%%
+# Generated %%NOW%%
+# python: %%PYTHON_CANONICAL%%
+# nodejs: %%NODEJS_CANONICAL%%
+FROM python:%%PYTHON_IMAGE_CANONICAL%%
 MAINTAINER Nikolai R Kristiansen <nikolaik@gmail.com>
 
 # Install node prereqs, nodejs and yarn
