--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,30 +2,30 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3
+      - image: circleci/python:3.7
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "cd:0e:48:63:be:a2:0e:f7:03:04:e7:7b:d8:51:8e:71"
+            - "e7:42:fa:02:36:d2:51:75:6d:a3:2c:09:ed:d8:36:7b"
       - checkout
-      - restore_cache:
-          key: v2-deps-{{ checksum "Pipfile.lock" }}
       - run:
-          name: Install dependencies, check latest versions and generate Dockerfiles
+          name: Verify on master branch
+          command: git branch --contains |grep -q '^[ |*] master$'
+      - setup_remote_docker
+      - restore_cache:
+          key: deps-v1-{{ checksum "Pipfile.lock" }}
+      - run:
+          name: Install deps, get versions, build, tag and push to docker hub
           command: |
             sudo pip install pipenv
             pipenv install
-            pipenv run python generate_versions.py
-      - run:
-          name: Build new or updated Dockerfiles, tag and push
-          command: |
-            echo "TODO"
+            pipenv run python build_versions.py
       - run:
           name: Add new versions to git (if any)
           command: |
             ./git_archive.sh
       - save_cache:
-          key: v2-deps-{{ checksum "Pipfile.lock" }}
+          key: deps-v1-{{ checksum "Pipfile.lock" }}
           paths: "~/.local/share/virtualenvs/"
 
 workflows:
