--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,10 @@ jobs:
       - run:
           name: Get versions, build, tag and push to docker hub
           command: pipenv run python build_versions.py
+      - run:
+          name: Add new versions to git (if any)
+          command: |
+            ./git_archive.sh
 
 workflows:
    version: 2
