--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,55 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/python:3.8.8
+      - image: cimg/python:3.9.9
+        environment:
+          PIPENV_VENV_IN_PROJECT: "1"
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "e7:42:fa:02:36:d2:51:75:6d:a3:2c:09:ed:d8:36:7b"
       - checkout
-      - run:
-          name: Verify on master branch
-          command: test "$CIRCLE_BRANCH" == "master"
-      - setup_remote_docker
       - restore_cache:
-          key: deps-v3-{{ checksum "Pipfile.lock" }}
+          key: deps-v4-{{ checksum "Pipfile.lock" }}
       - run:
           name: Install python dependencies
           command: pipenv install
       - save_cache:
-          key: deps-v2-{{ checksum "Pipfile.lock" }}
+          key: deps-v4-{{ checksum "Pipfile.lock" }}
           paths:
-           - "~/.local/share/virtualenvs/"
+            - ~/project/.venv
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - "*"
+
+  test:
+    docker:
+      - image: cimg/python:3.9.9
+        environment:
+          PIPENV_VENV_IN_PROJECT: "1"
+    steps:
+      - checkout
+      - run:
+          name: Lint
+          command: pipenv run bin/lint
+      - run:
+          name: Run tests
+          command: pipenv run bin/test
+
+  deploy:
+    docker:
+      - image: cimg/python:3.9.9
+        environment:
+          PIPENV_VENV_IN_PROJECT: "1"
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "e7:42:fa:02:36:d2:51:75:6d:a3:2c:09:ed:d8:36:7b"
+      - run:
+          name: Verify on master branch
+          command: test "$CIRCLE_BRANCH" == "master"
+      - attach_workspace:
+          at: ~/project
+      - setup_remote_docker
       - run:
           name: Get versions, build, tag and push to docker hub
           command: |
@@ -35,11 +64,18 @@ workflows:
    version: 2
    build_on_commit:
      jobs:
-       - build:
+       - build
+       - test:
+           requires:
+             - build
+       - deploy:
+           requires:
+             - test
            filters:
               branches:
                 only:
                   - master
+
    twice_a_day:
      triggers:
        - schedule:
@@ -50,3 +86,9 @@ workflows:
                  - master
      jobs:
        - build
+       - test:
+           requires:
+             - build
+       - deploy:
+           requires:
+             - test
