💚 Fix running tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
         environment:
           PIPENV_VENV_IN_PROJECT: "1"
     steps:
-      - checkout
+      - attach_workspace:
+          at: ~/project
       - run:
           name: Lint
           command: pipenv run bin/lint
