👷 CircleCI dynamic config, one job per version
Try writing dockerfiles to disk and make each job pick them up later
using CI workspace storage

🐳 Build docker images using docker cli

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,95 +1,43 @@
+# Setup workflow to allow simpler CI config for our kindly-plugins monorepo
+#
+# References:
+# - https://github.com/CircleCI-Public/api-preview-docs/blob/master/docs/setup-workflows.md
+# - https://discuss.circleci.com/t/setup-workflows-open-preview/39516
 version: 2.1
+
+orbs:
+  continuation: circleci/continuation@0.1.2
+
+setup: true
+
 jobs:
-  build:
+  setup:
     docker:
       - image: cimg/python:3.9.9
-        environment:
-          PIPENV_VENV_IN_PROJECT: "1"
     steps:
       - checkout
-      - restore_cache:
-          key: deps-v4-{{ checksum "Pipfile.lock" }}
       - run:
-          name: Install python dependencies
-          command: pipenv install --deploy --dev
-      - save_cache:
-          key: deps-v4-{{ checksum "Pipfile.lock" }}
-          paths:
-            - ~/project/.venv
+          name: Install dependencies
+          command: pipenv install --deploy
+      - run:
+          name: Generate config
+          command: |
+            FORCE=$(if git log --pretty=format:"%s" HEAD^..HEAD | grep -q '\[force\]'; then echo "--force"; else echo ""; fi)
+            pipenv run python -m build_versions.main --ci-config $FORCE
+      # Try saving README.md, versions.json and dockerfiles/ to use in the continued generated config
       - persist_to_workspace:
           root: ~/project
           paths:
-            - "*"
-
-  test:
-    docker:
-      - image: cimg/python:3.9.9
-        environment:
-          PIPENV_VENV_IN_PROJECT: "1"
-    steps:
-      - attach_workspace:
-          at: ~/project
-      - run:
-          name: Lint
-          command: pipenv run bin/lint
-      - run:
-          name: Run tests
-          command: pipenv run bin/test
-
-  deploy:
-    docker:
-      - image: cimg/python:3.9.9
-        environment:
-          PIPENV_VENV_IN_PROJECT: "1"
-    steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "e7:42:fa:02:36:d2:51:75:6d:a3:2c:09:ed:d8:36:7b"
-      - run:
-          name: Verify on main branch
-          command: test "$CIRCLE_BRANCH" == "main"
-      - attach_workspace:
-          at: ~/project
-      - setup_remote_docker
-      - run:
-          name: Get versions, build, tag and push to docker hub
-          command: |
-            FORCE=$(if git log --pretty=format:"%s" HEAD^..HEAD | grep -q '\[force\]'; then echo "--force"; else echo ""; fi)
-            pipenv run python -m build_versions.main $FORCE
-          no_output_timeout: 30m
-      - run:
-          name: Add new versions to git (if any)
-          command: ./git_archive.sh
+            - dockerfiles/
+            - README.md
+            - versions.json
+      - continuation/continue:
+          configuration_path: .circleci/config_generated.yml
 
 workflows:
-   version: 2
-   build_on_commit:
-     jobs:
-       - build
-       - test:
-           requires:
-             - build
-       - deploy:
-           requires:
-             - test
-           filters:
-              branches:
-                only:
-                  - main
-
-   twice_a_day:
-     triggers:
-       - schedule:
-           cron: "0 0,12 * * *"  # Twice a day at 00:00 and 12:00
-           filters:
-             branches:
-               only:
-                 - main
-     jobs:
-       - build
-       - test:
-           requires:
-             - build
-       - deploy:
-           requires:
-             - test
+  setup:
+    jobs:
+      - setup:
+          filters:
+            tags:
+              only: /.*/
