💚 Make venva relative to workspace root

--- a/.circleci/config_template.yml
+++ b/.circleci/config_template.yml
@@ -19,7 +19,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project
           paths:
-            - ~/project/.venv
+            - .venv
 
   test:
     docker:
