--- a/.circleci/config_template.yml
+++ b/.circleci/config_template.yml
@@ -78,7 +78,7 @@ jobs:
 
   release:
     docker:
-      - image: cimg/base
+      - image: cimg/base:2022.01
     steps:
       - add_ssh_keys:
           fingerprints:
