--- a/.circleci/config_template.yml
+++ b/.circleci/config_template.yml
@@ -97,7 +97,7 @@ jobs:
 
 workflows:
    version: 2
-   build_on_commit:
+   build:
      jobs:
        - build
        - test:
@@ -117,23 +117,3 @@ workflows:
               branches:
                 only:
                   - main
-
-   build_on_schedule:
-     triggers:
-       - schedule:
-           cron: "0 0,12 * * *"  # Twice a day at 00:00 and 12:00
-           filters:
-             branches:
-               only:
-                 - main
-     jobs:
-       - build
-       - test:
-           requires:
-             - build
-       - deploy:
-           requires:
-             - test
-       - release:
-           requires:
-             - deploy
