--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-black = "==21.12b0"
+black = "==22.3.*"
 pytest = "*"
 isort = "*"
 pre-commit = "*"
