--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,18 @@
+[tool.ruff]
+line-length = 120
+select = ["ALL"]
+ignore = [
+  "T201",  # This is a cli
+  "DTZ003", # Allow naive datetimes
+  "FBT002", # Allow boolean traps
+  "D", # FIXME: docs
+  "ANN", # FIXME: typing
+  "PTH123", # FIXME: https://github.com/charliermarsh/ruff/issues/2140
+]
+
+[tool.ruff.per-file-ignores]
+"**/test*.py" = ["S101"]
+
 [tool.black]
 line-length = 120
 target-version = ['py311']
-
-[tool.isort]
-profile = "black"
-line_length = 120
-skip_gitignore = true
