--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ ignore = [
   "G004", # Allow using f-strings when logging
   "D", # FIXME: docs
   "ANN", # FIXME: typing
+  "TD", # Allow TODOs
 ]
 
 [tool.ruff.per-file-ignores]
