🏷️ Type all function signatures
♻️  Use dataclasses for datas
🔥 Remove unused node_gpg_keys

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ ignore = [
   "FBT002", # Allow boolean traps
   "G004", # Allow using f-strings when logging
   "D", # FIXME: docs
-  "ANN", # FIXME: typing
   "TD", # Allow TODOs
+  "FBT001" # Allow boolean function args
 ]
 
 [tool.ruff.per-file-ignores]
