--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,3 +18,7 @@ jobs:
           pipenv install --deploy --dev
       - run: pipenv run ./bin/lint
       - run: pipenv run ./bin/test
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
