--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,6 @@ jobs:
       - run: |
           pip install pipenv
           pipenv install --deploy --dev
-      - run: echo ${{ matrix.key }}
       - name: Generate Dockerfile from config
         run: pipenv run python -m build_versions.main --dockerfile-with-context '${{ toJSON(matrix) }}'
       - name: Set up QEMU
@@ -59,7 +58,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+      - name: Build image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: dockerfiles/${{ matrix.key }}.Dockerfile
+          load: true
+          tags: nikolaik/python-nodejs:${{ matrix.key }}
+      - name: Run smoke tests
+        run: |
+          docker run --rm nikolaik/python-nodejs:${{ matrix.key }} sh -c "node --version && npm --version && yarn --version && python --version && pip --version && pipenv --version && poetry --version"
+      - name: Push image
         uses: docker/build-push-action@v4
         with:
           context: .
