--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,8 +10,12 @@ repos:
     rev: v0.0.270
     hooks:
       - id: ruff
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.3.0'
+  - repo: local
     hooks:
       - id: mypy
-        additional_dependencies: [types-requests==2.31.0.1]
+        name: mypy
+        entry: pipenv run mypy
+        language: python
+        require_serial: true
+        types: [python]
+        verbose: true
