--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ pytest = "*"
 pre-commit = "*"
 ruff = "==0.0.272"
 pytest-cov = "*"
+mypy = "*"
+types-requests = "==2.31.0.1"
+types-beautifulsoup4 = "==4.12.0.5"
 
 [packages]
 requests = "*"
