--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ pytest-cov = "*"
 mypy = "*"
 types-requests = "==2.31.0.1"
 types-beautifulsoup4 = "==4.12.0.5"
+pytest-socket = "*"
+responses = "*"
 
 [packages]
 requests = "*"
