--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ target-version = ['py311']
 strict = true
 disallow_any_unimported = true
 no_implicit_optional = true
+
+
+[tool.pytest.ini_options]
+addopts = "--disable-socket"
