chore: Use python 3.12
- Let actions/setup-python read python version from .python-version
- Use version 3.12 with pipenv and relock deps

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
           fetch-depth: 2
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version-file: '.python-version'
           cache: pipenv
       - name: Install dependencies
         run: |
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version-file: '.python-version'
           cache: pipenv
       - run: |
           pip install pipenv
@@ -85,7 +85,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version-file: '.python-version'
           cache: pipenv
       - run: |
           pip install pipenv
