chore(deps): update dependency types-requests to v2.31.0.20231231

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ pre-commit = "*"
 ruff = "==0.1.9"
 pytest-cov = "*"
 mypy = "*"
-types-requests = "==2.31.0.10"
+types-requests = "==2.31.0.20231231"
 types-beautifulsoup4 = "==4.12.0.7"
 pytest-socket = "*"
 responses = "*"
