--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,14 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "groupName": "ruff",
+      "matchDepNames": [
+        "ruff"
+      ],
+      "automerge": true
+    }
   ]
 }
