--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -12,12 +12,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-          cache: pipenv
       - run: |
-          pip install pipenv
-          pipenv install --deploy --dev
-      - run: pipenv run ./bin/lint
-      - run: pipenv run ./bin/test
+          pip install uv
+          uv pip install -r pyproject.toml --system --all-extras
+      - run: ./bin/lint
+      - run: ./bin/test
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
