--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
+[project]
+name = "docker-python-nodejs"
+version = "0.1.0"
+dependencies = [
+  "requests",
+  "semver",
+  "beautifulsoup4",
+  "jinja2",
+]
+requires-python = "== 3.12"
+
+[project.optional-dependencies]
+dev = [
+  "pytest",
+  "pre-commit",
+  "ruff==0.3.2",
+  "pytest-cov",
+  "mypy",
+  "types-requests==2.31.0.20240218",
+  "types-beautifulsoup4==4.12.0.20240229",
+  "pytest-socket",
+  "responses",
+]
+
 [tool.ruff]
 line-length = 120
 select = ["ALL"]
