chore(renovate): Update ruff name

--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
     {
       "groupName": "ruff",
       "matchDepNames": [
-        "ruff"
+        "dev/ruff"
       ],
       "automerge": true
     }
