--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,14 +20,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-      - name: Install dependencies
-        run: |
-          pip install uv
-          uv pip install -r pyproject.toml --system
+      - name: Install uv
+        run: pip install -U uv
       - name: Generate build matrix
         run: |
           FORCE=$(if git log --pretty=format:"%s" HEAD^..HEAD | grep -q '\[force\]'; then echo "--force"; else echo ""; fi)
-          python -m build_versions.main --ci-matrix $FORCE --ci-event ${{ github.event_name }}
+          uv run dpn --ci-matrix $FORCE --ci-event ${{ github.event_name }}
         id: set-matrix
 
   deploy:
@@ -42,11 +40,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-      - run: |
-          pip install uv
-          uv pip install -r pyproject.toml --system
+      - name: Install uv
+        run: pip install -U uv
       - name: Generate Dockerfile from config
-        run: python -m build_versions.main --dockerfile-with-context '${{ toJSON(matrix) }}'
+        run: uv run dpn --dockerfile-with-context '${{ toJSON(matrix) }}'
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -84,12 +81,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-      - run: |
-          pip install uv
-          uv pip install -r pyproject.toml --system
+      - name: Install uv
+        run: pip install -U uv
       - name: Update versions.json and README.md, then commit and push changes (if any)
         run: |
-          python -m build_versions.main --verbose --release
+          uv run dpn --verbose --release
           clean_checkout=$(git status --porcelain)
           if [[ -n "${clean_checkout}" ]]; then
               git config --global user.name "Nikolai Kristiansen" > /dev/null 2>&1
