--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -12,11 +12,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-      - run: |
-          pip install uv
-          uv pip install -r pyproject.toml --system --all-extras
-      - run: ./bin/lint
-      - run: ./bin/test
+      - run: pip install -U uv
+      - run: uv run ./bin/lint
+      - run: uv run ./bin/test
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
