--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,19 @@ dependencies = [
   "beautifulsoup4",
   "jinja2",
 ]
-requires-python = "== 3.12"
+description = "Build docker images with Python and Node.js"
+readme = "README.md"
+requires-python = "~= 3.12"
 
-[project.optional-dependencies]
-dev = [
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project.scripts]
+dpn = "docker_python_nodejs:dpn"
+
+[tool.uv]
+dev-dependencies = [
   "pytest",
   "pre-commit",
   "ruff==0.6.0",
