--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ dev-dependencies = [
   "ruff==0.6.2",
   "pytest-cov",
   "mypy",
-  "types-requests==2.32.0.20240712",
-  "types-beautifulsoup4==4.12.0.20240511",
+  "types-requests",
+  "types-beautifulsoup4",
   "pytest-socket",
   "responses",
 ]
