--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:recommended"
   ],
   "packageRules": [
     {
       "groupName": "ruff",
       "matchDepNames": [
-        "dev/ruff"
+        "ruff"
       ],
       "automerge": true
     }
