--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,11 +17,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version-file: '.python-version'
-      - name: Install uv
-        run: pip install -U uv
+          enable-cache: true
       - name: Generate build matrix
         run: |
           FORCE=$(if git log --pretty=format:"%s" HEAD^..HEAD | grep -q '\[force\]'; then echo "--force"; else echo ""; fi)
@@ -37,11 +35,9 @@ jobs:
       matrix: ${{ fromJSON(needs.generate-matrix.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version-file: '.python-version'
-      - name: Install uv
-        run: pip install -U uv
+          enable-cache: true
       - name: Generate Dockerfile from config
         run: uv run dpn --dockerfile-with-context '${{ toJSON(matrix) }}'
       - name: Set up QEMU
@@ -78,11 +74,9 @@ jobs:
     needs: [deploy]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version-file: '.python-version'
-      - name: Install uv
-        run: pip install -U uv
+          enable-cache: true
       - name: Update versions.json and README.md, then commit and push changes (if any)
         run: |
           uv run dpn --verbose --release
