--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,10 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version-file: '.python-version'
-      - run: pip install -U uv
+          enable-cache: true
       - run: uv run ./bin/lint
       - run: uv run ./bin/test
       - name: Upload coverage reports to Codecov
