--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 debug-*.Dockerfile
 .idea/
 dockerfiles/
-.circleci/config_generated.yml
-version_config.json
 __pycache__
 .coverage
 coverage.xml
 .vscode/
 htmlcov/
+tmp/
