--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ dependencies = [
 ]
 description = "Build docker images with Python and Node.js"
 readme = "README.md"
-requires-python = "~= 3.12"
+requires-python = "~= 3.13.0"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.9,<0.9.0"]
+build-backend = "uv_build"
 
 [project.scripts]
 dpn = "docker_python_nodejs:dpn"
@@ -22,7 +22,7 @@ dpn = "docker_python_nodejs:dpn"
 dev-dependencies = [
   "pytest",
   "pre-commit",
-  "ruff==0.12.8",
+  "ruff",
   "pytest-cov",
   "mypy",
   "types-requests",
