🐛 Misc fixes [force]
 - Uppercase AS in dockerfile
 - Update deps
 - Use non deprecated option for dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ build-backend = "uv_build"
 [project.scripts]
 dpn = "docker_python_nodejs:dpn"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
   "pytest",
   "pre-commit",
   "ruff",
